added dropdown feture

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
 		"eslint": "^8.41.0",
 		"eslint-plugin-react": "^7.32.2",
 		"mini-css-extract-plugin": "^2.7.6",
+		"react-select": "^5.10.0",
 		"sass": "^1.62.1",
 		"sass-loader": "^13.3.1",
 		"style-loader": "^3.3.3",
